tests/paczka2/big_fuzzy/35305448.err
Error in line 4: N8MvbiD S566 90,7
Error in line 9: N8MvbiD S100 36,5
Error in line 11: LpLoqdxf S566 10,0
Error in line 23: CrnSbmpXOv S469 29,4
Error in line 24: CrnSbmpXOv S100 11,8
Error in line 50: CrnSbmpXOv S566 13,3
Error in line 63: NWT93mt S100 72,0
Error in line 70: S100 S518 52,1
Error in line 72: CrnSbmpXOv S469 0,9
Error in line 74: S100 S469 29,8
Error in line 73: VOEdeez2l1 S566 18,8
Error in line 79: 3DlxJWu4MbY S566 50,1
Error in line 76: CrnSbmpXOv S566 95,2
Error in line 96: S100 S100 28,2
Error in line 91: VOEdeez2l1 S469 82,9
Error in line 98: S100 S469 36,1
Error in line 104: S100 S518 76,4
Error in line 105: S100 S100 41,4
Error in line 97: N8MvbiD S100 70,8
Error in line 119: N8MvbiD S518 11,8
Error in line 123: S100 S566 19,6
Error in line 126: S100 S518 61,3
Error in line 136: CrnSbmpXOv S100 75,4
Error in line 142: N8MvbiD S100 214,1
Error in line 137: 3DlxJWu4MbY S518 72,2
Error in line 150: LpLoqdxf S100 22,4
Error in line 152: LpLoqdxf S518 61,6
Error in line 138: CrnSbmpXOv S469 34,3
Error in line 139: VOEdeez2l1 S566 13,8
Error in line 159: LpLoqdxf S518 86,5
Error in line 166: NWT93mt S566 69,15
Error in line 163: N8MvbiD S100 92,8
Error in line 164: NWT93mt S566 81,8
Error in line 175: NWT93mt S469 88,4
Error in line 184: 3DlxJWu4MbY S469 85,1
Error in line 196: CrnSbmpXOv S518 52,9
Error in line 192: N8MvbiD S566 260,4
Error in line 206: LpLoqdxf S518 2,5
Error in line 218: CrnSbmpXOv S566 16,9
Error in line 210: N8MvbiD S469 15,1
Error in line 212: LpLoqdxf S469 80,1
Error in line 220: 3DlxJWu4MbY S518 27,7
